anthos-bundles/pci-dss-v4.0/require-config-management.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnforceConfigManagement
metadata:
  name: pci-dss-v4.0-require-config-management
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v4.0
  annotations:
    policycontroller.gke.io/bundleVersion: 202403.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'pci-dss-v4.0',
        bundleDisplayName: 'PCI DSS v4.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-pci-dss-v4',
        bundleVersion: '202403.0-preview',
        bundleDescription: 'Use the PCI DSS v4.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the Payment Card Industry (PCI) Data Security Standard (DSS) v4.0.',
        controlNumbers: '[1.2.8,2.2.6,5.3.5,6.3.2,6.5.1]',
        severity: 'UNSPECIFIED',
        description: 'Requires that Config Management is running with Drift Prevention enabled and at least one `RootSync` object on the cluster.',
        remediation: 'Ensure Config Management is enabled and running, Config Sync `preventDrift: true`, and at least one Config Sync `RootSync` object is present on the cluster. See "Get started with Config Sync" for more information: https://cloud.google.com/anthos-config-management/docs/tutorials/config-sync-multi-repo',
        minimumTemplateLibraryVersion: '1.14.0',
        constraintHash: 'de5c80159d0012e6e6e9668bb3adb3038b35e2baf839fe3e56f3c1ffbe273110'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - configmanagement.gke.io
        kinds:
          - ConfigManagement
  parameters:
    requireDriftPrevention: true
    requireRootSync: true
