anthos-bundles/pci-dss-v4.0/require-managed-by-label.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pci-dss-v4.0-require-managed-by-label
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v4.0
  annotations:
    policycontroller.gke.io/bundleVersion: 202403.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'pci-dss-v4.0',
        bundleDisplayName: 'PCI DSS v4.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-pci-dss-v4',
        bundleVersion: '202403.0-preview',
        bundleDescription: 'Use the PCI DSS v4.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the Payment Card Industry (PCI) Data Security Standard (DSS) v4.0.',
        controlNumbers: '[1.2.8,2.2.6,5.3.5,6.3.2,6.5.1]',
        severity: 'UNSPECIFIED',
        description: 'Requires all apps have a valid `app.kubernetes.io/managed-by` label.',
        remediation: 'All apps must have a specified value for the `app.kubernetes.io/managed-by` label. Objects must be managed by a valid Configuration Management system included in the parameter.',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '0b47729ad25b0aba9660a919dbf088916797468b6b01803b28053f25129c7f45'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - apps
        kinds:
          - ReplicaSet
          - Deployment
          - StatefulSet
          - DaemonSet
    excludedNamespaces:
      - kube-system
      - kube-public
      - gatekeeper-system
      - config-management-monitoring
      - config-management-system
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
      - poco-trial
      - cert-manager
      - gke-system
      - capi-system
      - anthos-identity-service
      - capi-kubeadm-bootstrap-system
      - vm-system
      - gke-managed-metrics-server
      - gmp-system
      - gmp-public
      - gke-gmp-system
      - apigee
      - apigee-system
      - gke-managed-cim
  parameters:
    labels:
      - allowedRegex: ^(.+\.googleapis\.com|configmanagement\.gke\.io)$
        key: app.kubernetes.io/managed-by
    message: This resource is missing the required app.kubernetes.io/managed-by label
