anthos-bundles/pci-dss-v4.0/require-valid-network-ranges.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireValidRangesForNetworks
metadata:
  name: pci-dss-v4.0-require-valid-network-ranges
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v4.0
  annotations:
    policycontroller.gke.io/bundleVersion: 202403.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'pci-dss-v4.0',
        bundleDisplayName: 'PCI DSS v4.0',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-pci-dss-v4',
        bundleVersion: '202403.0-preview',
        bundleDescription: 'Use the PCI DSS v4.0 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the Payment Card Industry (PCI) Data Security Standard (DSS) v4.0.',
        controlNumbers: '[1.3.1,1.3.2,1.4.2,1.4.4]',
        severity: 'UNSPECIFIED',
        description: 'Restricts CIDR ranges permitted for use with ingress and egress.',
        remediation: 'Ingress and egress is restricted to specified CIDR ranges. Remove the violating ingress or egress CIDR ranges, or update the allowed parameter. See "Ingress" for more information: https://kubernetes.io/docs/concepts/services-networking/ingress/',
        minimumTemplateLibraryVersion: '1.14.0',
        constraintHash: 'af4d7db30cad0da1003e0b0199a23f1e1b66a5e5a5febc99da36981c5a5e2f8f'
      }"
spec:
  enforcementAction: dryrun
  parameters:
    allowedIngress:
      # example "10.0.0.0/24"
      - 10.0.0.0/24
    allowedEgress:
      # example "10.0.0.0/32"
      - 10.0.0.0/32
